--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
     <main class="container">
       <section class="section full_h">
         <div class="main-img-wrap reset">
-          <img src="./image/main_3.png" alt="" />
+          <img src="./image/main_3.png" alt="" style="max-width: initial;"/>
 
           <div class="main-img-wrap postion-a" style="text-align: center">
             <img
-              src="./image/8.jpg"
+              src="./image/main_img_1.jpg"
               alt=""
               style="
                 /* border-radius: 13px; */
@@ -166,37 +166,37 @@
           <div class="relation_con row_couple_name">
             <div class="relation_list groom">
               <span class="parents">
-                                                <span class="img_box" style="display:none" var="isGroomDadAngel0">
-                                                </span>
-                                                <span class="char_box" style="display:none" var="isGroomDadAngel1">故</span>
-                                                <span var="groomDadLastName">김</span><span var="groomDadFirstName">종은</span>
-                                                <span var="groomDot">·</span>
-                                                <span class="img_box" style="display:none" var="isGroomMomAngel0">
-                                                </span>
-                                                <span class="char_box" style="display:none" var="isGroomMomAngel1">故</span>
-                                                <span var="groomMomLastName">권</span><span var="groomMomFirstName">영애</span>
-                                            </span>
+                <span class="img_box" style="display:none" var="isGroomDadAngel0">
+                </span>
+                <span class="char_box" style="display:none" var="isGroomDadAngel1">故</span>
+                <span var="groomDadLastName">김</span><span var="groomDadFirstName">종은</span>
+                <span var="groomDot">·</span>
+                <span class="img_box" style="display:none" var="isGroomMomAngel0">
+                </span>
+                <span class="char_box" style="display:none" var="isGroomMomAngel1">故</span>
+                <span var="groomMomLastName">권</span><span var="groomMomFirstName">영애</span>
+            </span>
               <span class="relation" style="display:inline-block">
-                                                <span>의</span>
-                                                <span var="groomRelationName">장남</span>
-                                            </span>
+                <span>의</span>
+                <span var="groomRelationName">장남</span>
+            </span>
             </div>
             <div class="relation_list bride">
-                                            <span class="parents">
-                                                <span class="img_box" style="display:none" var="isBrideDadAngel0">
-                                                </span>
-                                                <span class="char_box" style="display:none" var="isBrideDadAngel1">故</span>
-                                                <span var="brideDadLastName">이</span><span var="brideDadFirstName">정엽</span>
-                                                <span var="brideDot" style="display:inline-block">·</span>
-                                                <span class="img_box" style="display:none" var="isBrideMomAngel0">
-                                                </span>
-                                                <span class="char_box" style="display:none" var="isBrideMomAngel1">故</span>
-                                                <span var="brideMomLastName">김</span><span var="brideMomFirstName">혜숙</span>
-                                            </span>
-              <span class="relation" style="display:inline-block">
-                                                <span>의</span>
-                                                <span var="brideRelationName">장녀</span>
-                                            </span>
+            <span class="parents">
+                <span class="img_box" style="display:none" var="isBrideDadAngel0">
+                </span>
+                <span class="char_box" style="display:none" var="isBrideDadAngel1">故</span>
+                <span var="brideDadLastName">이</span><span var="brideDadFirstName">정엽</span>
+                <span var="brideDot" style="display:inline-block">·</span>
+                <span class="img_box" style="display:none" var="isBrideMomAngel0">
+                </span>
+                <span class="char_box" style="display:none" var="isBrideMomAngel1">故</span>
+                <span var="brideMomLastName">김</span><span var="brideMomFirstName">혜숙</span>
+            </span>
+            <span class="relation" style="display:inline-block">
+                <span>의</span>
+                <span var="brideRelationName">장녀</span>
+            </span>
             </div>
           </div>
         </div>
@@ -625,7 +625,7 @@
                 </div>
                 <div style="display: flex">
                   <div class="acc_num" var="brideDadBankAcc">
-                    110-330-954-338
+                    110330954338
                   </div>
                   <div class="acc_name">
                     <span class="bank" var="brideDadBankName">신한은행</span>
@@ -663,7 +663,7 @@
                 </div>
                 <div style="display: flex">
                   <div class="acc_num" var="brideMomBankAcc">
-                    100090-51-164879
+                    10009051164879
                   </div>
                   <div class="acc_name">
                     <span class="bank" var="brideMomBankName">농협은행</span>
