--- a/index.html
+++ b/index.html
@@ -393,23 +393,22 @@
         <div class="title">오시는 길</div>
         <div id="map" style="height: 300px; margin-bottom: 25px"></div>
         <div class="text_areas line_height_17">
-          <p>[자동차]</p>
+          <p>자동차</p>
           <p>서울특별시 영등포구 국회대로76길 16 여의도 켄싱턴호텔</p>
           <br />
-          <p>[버스]</p>
-          <p>- 국회의사당, 국민은행 앞 하차</p>
-          <p>10, 70-2, 162, 163,260, 361, 5615,</p>
-          <p>5618, 6713,7613, G7625, 영등포10</p>
-          <p>- 국회의사당 앞 하차</p>
-          <p>1002, 163, 461,463,6623,6713</p>
-          <p>- 켄싱턴호텔 여의도 하차</p>
+          <p>버스</p>
+          <p> - 국회의사당, 국민은행 앞 하차</p>
+          <p>  10, 70-2, 162, 163,260, 361, 5615,</p>
+          <p>  5618, 6713,7613, G7625, 영등포10</p>
+          <p> - 국회의사당 앞 하차</p>
+          <p>  1002, 163, 461,463,6623,6713</p>
+          <p> - 켄싱턴호텔 여의도 하차</p>
+          <p>  공항버스 6007</p>
+          <p> - 여의도 순복음교회 앞 하차</p>
+          <p>  10,261, 463, 5633, 5634, 영등포10</p>
           <br />
-          <p>[공항버스 6007]</p>
-          <p>- 여의도 순복음교회 앞 하차</p>
-          <p>10,261, 463, 5633, 5634, 영등포10</p>
-          <br />
-          <p>[지하철]</p>
-          <p>9호선 국회의사당역하차 - 1,2,3번 출구 - 도보 5분</p>
+          <p>지하철</p>
+          <p> 9호선 국회의사당역하차 - 1,2,3번 출구 - 도보 5분</p>
         </div>
       </section>
 
@@ -419,7 +418,7 @@
           <img
             src="./image/heart.png"
             alt=""
-            style="width: 24px; margin: 103px auto 21px"
+            style="width: 24px; margin: 76px auto 21px"
           />
         </div>
         <div class="title">마음 전하실 곳</div>
@@ -625,7 +624,7 @@
                 </div>
                 <div style="display: flex">
                   <div class="acc_num" var="brideDadBankAcc">
-                    110330954338
+                    110-330-954-338
                   </div>
                   <div class="acc_name">
                     <span class="bank" var="brideDadBankName">신한은행</span>
@@ -663,7 +662,7 @@
                 </div>
                 <div style="display: flex">
                   <div class="acc_num" var="brideMomBankAcc">
-                    10009051164879
+                    100090-51-164879
                   </div>
                   <div class="acc_name">
                     <span class="bank" var="brideMomBankName">농협은행</span>
