--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
           margin-bottom: 10px;">
         </div>
         <p style="font-size: 11.6px;">김준수 ♡ 이예나 결혼식 - 모두의 사랑 속에</p>
-        <p style="font-size: 11.6px;">Copyright © 2025 junsu & yeana</p>
+        <p style="font-size: 11.6px;">Copyright © 2025 junsu & yena</p>
         <!-- <p>문의: <a href="mailto:wedding@example.com">wedding@example.com</a></p> -->
       </div>
     </footer>
@@ -855,10 +855,12 @@
   // 볼륨 버튼 클릭 이벤트
   volumeBtn.addEventListener("click", () => {
     if (isMuted) {
+      audio.play()
       audio.volume = 0.5; // 음소거 해제
       volumeBtn.textContent = "🔊"; // 스피커 아이콘
     } else {
       audio.volume = 0; // 음소거
+      audio.pause();
       volumeBtn.textContent = "🔈"; // 음소거 아이콘
     }
     isMuted = !isMuted; // 상태 반전
@@ -883,7 +885,7 @@
       let currentScroll = window.scrollY;
       if (currentScroll > 0) {
         window.requestAnimationFrame(smoothScrollToTop);
-        window.scrollTo(0, currentScroll - currentScroll / 8);
+        window.scrollTo(0, 0);
       }
     }
 
