--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
         >
           <p>2025년 1월 18일 토요일 오전11시</p>
           <br />
-          <p>여의도 켄싱턴호털</p>
+          <p>여의도 켄싱턴호텔</p>
           <br />
-          <p>15층 센트럴 파크 웨딩홀</p>
+          <p>15층 센트럴파크 웨딩홀</p>
         </div>
       </section>
       <!-- Main [Photo + Name + Date + Venue] -->
@@ -881,8 +881,8 @@
     });
 
     // 부드러운 스크롤 함수
-    function smoothScrollToTop() {
-  const scrollDuration = 500; // 스크롤 지속 시간 (밀리초)
+ function smoothScrollToTop() {
+  const scrollDuration = 100; // 스크롤 지속 시간 (밀리초)
   const scrollHeight = window.scrollY;
   const scrollStep = scrollHeight / (scrollDuration / 16); // 16ms = 1 frame (대략 60fps)
 
