--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         </div>
       </section>
       <section
-        class="section section3 aos-init aos-animate hidden"
+        class="section aos-init aos-animate hidden"
         aos=""
         data-aos="fade-up"
       >
@@ -566,7 +566,7 @@
                   <a href="tel:010-3073-9118" class="s_btn"
                     ><span style="filter: brightness(0)">&#128222;</span></a
                   >
-                  <a class="s_btn">복사</a>
+                  <a href="javascript:;" class="s_btn">복사</a>
                   <a
                     var="groomBankKakaopay_"
                     href="https://qr.kakaopay.com/FJr4NUyTo"
@@ -605,7 +605,7 @@
                   <a href="tel:010-7399-9118" class="s_btn"
                     ><span style="filter: brightness(0)">&#128222;</span></a
                   >
-                  <a class="s_btn">복사</a>
+                  <a href="javascript:;" class="s_btn">복사</a>
                 </div>
               </li>
               <li var="isBrideMomBank">
@@ -637,7 +637,7 @@
                   <a href="tel:010-7508-9118" class="s_btn"
                     ><span style="filter: brightness(0)">&#128222;</span></a
                   >
-                  <a class="s_btn">복사</a>
+                  <a href="javascript:;" class="s_btn">복사</a>
                 </div>
               </li>
             </ul>
@@ -678,7 +678,7 @@
                   <a href="tel:010-2579-9653" class="s_btn"
                     ><span style="filter: brightness(0)">&#128222;</span></a
                   >
-                  <a class="s_btn">복사</a>
+                  <a href="javascript:;" class="s_btn">복사</a>
                   <a
                     var="brideBankKakaopay_"
                     href="https://qr.kakaopay.com/FE1lHL04X"
@@ -717,7 +717,7 @@
                   <a href="tel:010-2281-9653" class="s_btn"
                     ><span style="filter: brightness(0)">&#128222;</span></a
                   >
-                  <a class="s_btn">복사</a>
+                  <a href="javascript:;" class="s_btn">복사</a>
                 </div>
               </li>
               <li var="isBrideMomBank">
@@ -749,7 +749,7 @@
                   <a href="tel:010-6287-9653" class="s_btn"
                     ><span style="filter: brightness(0)">&#128222;</span></a
                   >
-                  <a class="s_btn">복사</a>
+                  <a href="javascript:;" class="s_btn">복사</a>
                 </div>
               </li>
             </ul>
@@ -780,7 +780,7 @@
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=0f774301663c4292c86c39ef1a23b00f&libraries=services"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="./js/common.js" defer></script>
-    <script src="./js/scrollReveal.js" defer></script>
+    <script src="./js/common.js"></script>
+    <script src="./js/scrollReveal.js"></script>
   </body>
 </html>
