--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
       </header>
       <section class="section full_h">
         <div class="main-img-wrap reset">
-          <img src="./image/main_3.png" alt="" style="max-width: initial" />
+          <img src="./image/main_3.jpg" alt="" style="max-width: initial" />
 
-          <div class="main-img-wrap postion-a" style="text-align: center">
+          <!-- <div class="main-img-wrap postion-a" style="text-align: center">
             <img
               src="./image/main_img_1.jpg"
               alt=""
@@ -109,7 +109,7 @@
                 text-align: center;
               "
             />
-          </div>
+          </div> -->
         </div>
       </section>
       <section class="section hidden">
@@ -160,7 +160,7 @@
         </div>
       </section>
       <section
-        class="section aos-init aos-animate hidden"
+        class="section section3 aos-init aos-animate hidden"
         aos=""
         data-aos="fade-up"
       >
@@ -312,7 +312,7 @@
       <!-- Calendar Section -->
       <section class="section hidden" id="calendar">
         <div class="main-img-wrap reset">
-          <img src="./image/calendar.png" alt="" />
+          <img src="./image/calendar.jpg" alt="" />
         </div>
       </section>
 
@@ -566,7 +566,7 @@
                   <a href="tel:010-3073-9118" class="s_btn"
                     ><span style="filter: brightness(0)">&#128222;</span></a
                   >
-                  <a href="javascript:;" class="s_btn">복사</a>
+                  <a href="javascript:;" class="s_btn copy">복사</a>
                   <a
                     var="groomBankKakaopay_"
                     href="https://qr.kakaopay.com/FJr4NUyTo"
@@ -605,7 +605,7 @@
                   <a href="tel:010-7399-9118" class="s_btn"
                     ><span style="filter: brightness(0)">&#128222;</span></a
                   >
-                  <a href="javascript:;" class="s_btn">복사</a>
+                  <a href="javascript:;" class="s_btn copy">복사</a>
                 </div>
               </li>
               <li var="isBrideMomBank">
@@ -637,7 +637,7 @@
                   <a href="tel:010-7508-9118" class="s_btn"
                     ><span style="filter: brightness(0)">&#128222;</span></a
                   >
-                  <a href="javascript:;" class="s_btn">복사</a>
+                  <a href="javascript:;" class="s_btn copy">복사</a>
                 </div>
               </li>
             </ul>
@@ -678,7 +678,7 @@
                   <a href="tel:010-2579-9653" class="s_btn"
                     ><span style="filter: brightness(0)">&#128222;</span></a
                   >
-                  <a href="javascript:;" class="s_btn">복사</a>
+                  <a href="javascript:;" class="s_btn copy">복사</a>
                   <a
                     var="brideBankKakaopay_"
                     href="https://qr.kakaopay.com/FE1lHL04X"
@@ -717,7 +717,7 @@
                   <a href="tel:010-2281-9653" class="s_btn"
                     ><span style="filter: brightness(0)">&#128222;</span></a
                   >
-                  <a href="javascript:;" class="s_btn">복사</a>
+                  <a href="javascript:;" class="s_btn copy">복사</a>
                 </div>
               </li>
               <li var="isBrideMomBank">
@@ -749,7 +749,7 @@
                   <a href="tel:010-6287-9653" class="s_btn"
                     ><span style="filter: brightness(0)">&#128222;</span></a
                   >
-                  <a href="javascript:;" class="s_btn">복사</a>
+                  <a href="javascript:;" class="s_btn copy">복사</a>
                 </div>
               </li>
             </ul>
