feat: 이미지 변경 및 css 수정

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <button id="volume-btn" class="volume-button">🔊</button>
         </div>
       </header>
-      <section class="section full_h">
+      <section class="section full_h hidden_main">
         <div class="main-img-wrap reset">
           <img src="./image/main_3.jpg" alt="" style="max-width: initial" />
 
@@ -133,11 +133,8 @@
       <!-- Main [Photo + Name + Date + Venue] -->
       <section class="section hidden">
         <div class="content" style="margin-top: 30px">
-          <div class="sub_img_wrap">
-            <img src="./image/flower.png" alt="" class="flower_img left" />
-          </div>
-          <div class="sub_img_wrap">
-            <img src="./image/flower.png" alt="" class="flower_img reverse" />
+          <div class="sub_img_wrap mb37">
+            <img src="./image/flower2.png" alt="" class="flower_img" />
           </div>
           <div class="text_areas line_heigh1 text_align_center">
             <p>함께 있을 때 가장 나다운 모습이 되고,</p>
@@ -152,10 +149,7 @@
             <p>함께 축복해주시면 감사하겠습니다.</p>
           </div>
           <div class="sub_img_wrap mt37">
-            <img src="./image/flower.png" alt="" class="flower_img left" />
-          </div>
-          <div class="sub_img_wrap">
-            <img src="./image/flower.png" alt="" class="flower_img reverse" />
+            <img src="./image/flower1.png" alt="" class="flower_img" />
           </div>
         </div>
       </section>
@@ -524,7 +518,7 @@
           <img
             src="./image/heart.png"
             alt=""
-            style="width: 24px; margin: 76px auto 21px"
+            style="width: 49px; margin: 76px auto 11px"
           />
         </div>
         <div class="title">마음 전하실 곳</div>
