--- a/index.html
+++ b/index.html
@@ -82,9 +82,6 @@
   </head>
   <body>
     <!-- Header Section -->
-
-    <!-- 컨셉: [이팩트, 가독성, 깔끔, 귀여움] -->
-    <!-- 포인트 컬러: [핑크, 은색, 검은색, 흰색] -->
     <main class="container">
       <header class="header">
         <div class="header_name row_couple_name">
@@ -123,7 +120,7 @@
             padding: 15px 0;
           "
         >
-          <p>2025년 1월 18일 토요일 오전11시</p>
+          <p>2025년 1월 18일 토요일 오전 11시</p>
           <br />
           <p>여의도 켄싱턴호텔</p>
           <br />
@@ -144,7 +141,7 @@
             <p>함께 맞는 열번째 겨울, 저희 결혼합니다.</p>
             <br />
             <br />
-            <p>부부로서 나아갈 수많은 계절의 첫걸음을</p>
+            <p>부부로서 나아갈 수많은 계절의 첫 걸음을</p>
             <br />
             <p>함께 축복해주시면 감사하겠습니다.</p>
           </div>
@@ -305,8 +302,24 @@
       </section>
       <!-- Calendar Section -->
       <section class="section hidden" id="calendar">
+        <div class="title">
+          
+          <p>☆</p>
+          <p>&nbsp;⋆｡</p>
+          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;☆</p>
+          <p>&nbsp;&nbsp;☆</p>
+        </div>
+        <div class="title"></div>
         <div class="main-img-wrap reset">
           <img src="./image/calendar.jpg" alt="" />
+        </div>
+        <div class="title">
+          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;˚｡⋆ ☆</p>
+          <p>☆</p>
+          <p>&nbsp;&nbsp;&nbsp;&nbsp;☆</p>
+          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;☆</p>
+          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;•°˳</p>
+          <p>&nbsp;&nbsp;&nbsp;★</p>
         </div>
       </section>
 
@@ -498,17 +511,17 @@
           <br />
           <p>버스</p>
           <p>- 국회의사당, 국민은행 앞 하차</p>
-          <p>10, 70-2, 162, 163,260, 361, 5615,</p>
-          <p>5618, 6713,7613, G7625, 영등포10</p>
+          <p>&nbsp;&nbsp;10, 70-2, 162, 163,260, 361, 5615,</p>
+          <p>&nbsp;&nbsp;5618, 6713,7613, G7625, 영등포10</p>
           <p>- 국회의사당 앞 하차</p>
-          <p>1002, 163, 461,463,6623,6713</p>
+          <p>&nbsp;&nbsp;1002, 163, 461,463,6623,6713</p>
           <p>- 켄싱턴호텔 여의도 하차</p>
-          <p>공항버스 6007</p>
+          <p>&nbsp;&nbsp;공항버스 6007</p>
           <p>- 여의도 순복음교회 앞 하차</p>
-          <p>10,261, 463, 5633, 5634, 영등포10</p>
+          <p>&nbsp;&nbsp;10,261, 463, 5633, 5634, 영등포10</p>
           <br />
           <p>지하철</p>
-          <p>9호선 국회의사당역하차 - 1,2,3번 출구 - 도보 5분</p>
+          <p>9호선 국회의사당역 하차 - 1,2,3번 출구 - 도보 5분</p>
         </div>
       </section>
 
@@ -528,7 +541,7 @@
             aos=""
             data-aos="fade-up"
           >
-            <div class="account_box" style="color: #8ab8da">
+            <div class="account_box font_size15" style="color: #8ab8da">
               신랑측
               <img src="./image/heart.png" alt="" style="height: 20px" />
             </div>
@@ -544,7 +557,7 @@
                 />
                 <div class="left_box">
                   <div>
-                    <h4 style="color: #8ab8da">신랑</h4>
+                    <h4 class="font_size15" style="color: #8ab8da">신랑</h4>
                     <span class="holder" var="groomBankHolder">김준수</span>
                   </div>
                   <div style="display: flex">
@@ -581,7 +594,7 @@
                 />
                 <div class="left_box">
                   <div>
-                    <h4 style="color: #8ab8da">
+                    <h4 class="font_size15" style="color: #8ab8da">
                       신랑 <span var="brideDadText">아버지</span>
                     </h4>
                     <span class="holder" var="brideDadBankHolder">김종은</span>
@@ -613,7 +626,7 @@
                 />
                 <div class="left_box">
                   <div>
-                    <h4 style="color: #8ab8da">
+                    <h4 class="font_size15" style="color: #8ab8da">
                       신랑 <span var="brideMomText">어머니</span>
                     </h4>
                     <span class="holder" var="brideMomBankHolder">권영애</span>
@@ -641,7 +654,7 @@
             aos=""
             data-aos="fade-up"
           >
-            <div class="account_box bride_account" style="color: #f7b3dd">
+            <div class="account_box bride_account font_size15" style="color: #f7b3dd">
               신부측
               <img src="./image/heart.png" alt="" style="height: 20px" />
             </div>
@@ -657,7 +670,7 @@
                 />
                 <div class="left_box">
                   <div>
-                    <h4 style="color: #f7b3dd">신부</h4>
+                    <h4 class="font_size15" style="color: #f7b3dd">신부</h4>
                     <span class="holder" var="brideBankHolder">이예나</span>
                   </div>
                   <div style="display: flex">
@@ -693,7 +706,7 @@
                 />
                 <div class="left_box">
                   <div>
-                    <h4 style="color: #f7b3dd">
+                    <h4 class="font_size15" style="color: #f7b3dd">
                       신부 <span var="brideDadText">아버지</span>
                     </h4>
                     <span class="holder" var="brideDadBankHolder">이정엽</span>
@@ -725,7 +738,7 @@
                 />
                 <div class="left_box">
                   <div>
-                    <h4 style="color: #f7b3dd">
+                    <h4 class="font_size15" style="color: #f7b3dd">
                       신부 <span var="brideMomText">어머니</span>
                     </h4>
                     <span class="holder" var="brideMomBankHolder">김혜숙</span>
@@ -761,7 +774,7 @@
           />
         </div>
         <p style="font-size: 11.6px">
-          김준수 ♡ 이예나 결혼식 - 모두의 사랑 속에
+          준수와 예나의 결혼식 - 모두의 사랑 속에
         </p>
         <p style="font-size: 11.6px">Copyright © 2025 junsu & yena</p>
         <!-- <p>문의: <a href="mailto:wedding@example.com">wedding@example.com</a></p> -->
