--- a/index.html
+++ b/index.html
@@ -111,13 +111,14 @@
       </section>
       <section class="section hidden">
         <div
-          class="text_areas line_heigh1 text_align_center"
+          class="text_areas line_heigh1 text_align_center font_weight_bd"
           style="
             border-top: 2px solid #f4cce0;
             border-bottom: 2px solid #f4cce0;
             max-width: 230px;
             margin: 0 auto 50px;
             padding: 15px 0;
+
           "
         >
           <p>2025년 1월 18일 토요일 오전 11시</p>
@@ -503,13 +504,13 @@
             style="width: 122px; margin: 103px auto 21px"
           />
         </div>
-        <div class="title">오시는 길</div>
+        <div class="title font_weight_bd">오시는 길</div>
         <div id="map" style="height: 300px; margin-bottom: 25px"></div>
         <div class="text_areas line_height_17">
-          <p>자동차</p>
+          <p class="font_weight_bd">자동차</p>
           <p>서울특별시 영등포구 국회대로76길 16 여의도 켄싱턴호텔</p>
           <br />
-          <p>버스</p>
+          <p class="font_weight_bd">버스</p>
           <p>- 국회의사당, 국민은행 앞 하차</p>
           <p>&nbsp;&nbsp;10, 70-2, 162, 163,260, 361, 5615,</p>
           <p>&nbsp;&nbsp;5618, 6713,7613, G7625, 영등포10</p>
@@ -520,7 +521,7 @@
           <p>- 여의도 순복음교회 앞 하차</p>
           <p>&nbsp;&nbsp;10,261, 463, 5633, 5634, 영등포10</p>
           <br />
-          <p>지하철</p>
+          <p class="font_weight_bd"> 지하철</p>
           <p>9호선 국회의사당역 하차 - 1,2,3번 출구 - 도보 5분</p>
         </div>
       </section>
@@ -595,7 +596,7 @@
                 <div class="left_box">
                   <div>
                     <h4 class="font_size15" style="color: #8ab8da">
-                      신랑 <span var="brideDadText">아버지</span>
+                      신랑 아버지
                     </h4>
                     <span class="holder" var="brideDadBankHolder">김종은</span>
                   </div>
@@ -627,7 +628,7 @@
                 <div class="left_box">
                   <div>
                     <h4 class="font_size15" style="color: #8ab8da">
-                      신랑 <span var="brideMomText">어머니</span>
+                      신랑 어머니
                     </h4>
                     <span class="holder" var="brideMomBankHolder">권영애</span>
                   </div>
@@ -707,7 +708,7 @@
                 <div class="left_box">
                   <div>
                     <h4 class="font_size15" style="color: #f7b3dd">
-                      신부 <span var="brideDadText">아버지</span>
+                      신부 아버지
                     </h4>
                     <span class="holder" var="brideDadBankHolder">이정엽</span>
                   </div>
@@ -739,7 +740,7 @@
                 <div class="left_box">
                   <div>
                     <h4 class="font_size15" style="color: #f7b3dd">
-                      신부 <span var="brideMomText">어머니</span>
+                      신부 어머니
                     </h4>
                     <span class="holder" var="brideMomBankHolder">김혜숙</span>
                   </div>
