--- a/index.html
+++ b/index.html
@@ -111,21 +111,20 @@
       </section>
       <section class="section hidden">
         <div
-          class="text_areas line_heigh1 text_align_center font_weight_bd"
+          class="text_areas line_heigh1 text_align_center"
           style="
             border-top: 2px solid #f4cce0;
             border-bottom: 2px solid #f4cce0;
             max-width: 230px;
             margin: 0 auto 50px;
             padding: 15px 0;
-
           "
         >
-          <p>2025년 1월 18일 토요일 오전 11시</p>
+          <p class="font_weight_bd">2025년 1월 18일 토요일 오전 11시</p>
           <br />
-          <p>여의도 켄싱턴호텔</p>
+          <p class="font_weight_bd">여의도 켄싱턴호텔</p>
           <br />
-          <p>15층 센트럴파크 웨딩홀</p>
+          <p class="font_weight_bd">15층 센트럴파크 웨딩홀</p>
         </div>
       </section>
       <!-- Main [Photo + Name + Date + Venue] -->
@@ -304,7 +303,6 @@
       <!-- Calendar Section -->
       <section class="section hidden" id="calendar">
         <div class="title">
-          
           <p>☆</p>
           <p>&nbsp;⋆｡</p>
           <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;☆</p>
@@ -521,7 +519,7 @@
           <p>- 여의도 순복음교회 앞 하차</p>
           <p>&nbsp;&nbsp;10,261, 463, 5633, 5634, 영등포10</p>
           <br />
-          <p class="font_weight_bd"> 지하철</p>
+          <p class="font_weight_bd">지하철</p>
           <p>9호선 국회의사당역 하차 - 1,2,3번 출구 - 도보 5분</p>
         </div>
       </section>
@@ -655,7 +653,10 @@
             aos=""
             data-aos="fade-up"
           >
-            <div class="account_box bride_account font_size15" style="color: #f7b3dd">
+            <div
+              class="account_box bride_account font_size15"
+              style="color: #f7b3dd"
+            >
               신부측
               <img src="./image/heart.png" alt="" style="height: 20px" />
             </div>
@@ -774,15 +775,21 @@
             style="height: 57px; margin-bottom: 10px"
           />
         </div>
-        <p style="font-size: 11.6px">
-          준수와 예나의 결혼식 - 모두의 사랑 속에
-        </p>
+        <p style="font-size: 11.6px">준수와 예나의 결혼식 - 모두의 사랑 속에</p>
         <p style="font-size: 11.6px">Copyright © 2025 junsu & yena</p>
         <!-- <p>문의: <a href="mailto:wedding@example.com">wedding@example.com</a></p> -->
       </div>
     </footer>
     <!-- Top 버튼 -->
     <button id="top-btn" class="top-button">▲</button>
+    <button id="kakao-link-btn" class="top-button2">
+      <img src="./image/shere.png" alt="" />
+    </button>
+    <script
+      src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.4/kakao.min.js"
+      integrity="sha384-DKYJZ8NLiK8MN4/C5P2dtSmLQ4KwPaoqAfyA/DfmEc1VDxu4yyC7wy6K1Hs90nka"
+      crossorigin="anonymous"
+    ></script>
     <script
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=0f774301663c4292c86c39ef1a23b00f&libraries=services"
